--- a/css/styles.css
+++ b/css/styles.css
@@ -28,8 +28,9 @@ body {
   color: #ff4c29;
   min-height: auto;
   display: flex;
-  justify-content: space-evenly;
-  align-items: center; }
+  justify-content: center;
+  align-items: center;
+  text-align: center; }
   .footer div a {
     font-size: 0.9rem;
     font-weight: 500;
@@ -97,6 +98,13 @@ body {
 .kit {
   background-color: #f5f5f5;
   color: #2c394b; }
+  .kit .icon-list {
+    color: #ff4c29; }
+  .kit .icon-list::before {
+    content: "";
+    padding: 0 2rem 1rem 0;
+    background-image: url("../img/list-icon-gr.svg");
+    background-repeat: no-repeat; }
 
 .img-kit > img {
   width: 20rem;
