--- a/css/styles.css
+++ b/css/styles.css
@@ -12,16 +12,24 @@ body {
   background-image: url("../img/run1.jpg");
   background-repeat: no-repeat;
   background-size: cover; }
-  @media (max-width: 375px) {
+  @media (max-width: 320px) {
     .hero {
-      padding: 2rem 0;
+      padding: 2rem 0rem;
       min-height: 100vh; } }
-  .hero div p {
+  .hero div span {
     letter-spacing: 1.4rem;
-    text-shadow: 2px 1px 2px #121314; }
-    @media (max-width: 375px) {
-      .hero div p {
-        letter-spacing: 0; } }
+    text-shadow: 1px 1px 2px #121314; }
+    @media (max-width: 320px) {
+      .hero div span {
+        letter-spacing: 0px;
+        font-size: 0.9rem; } }
+    @media (max-width: 425px) {
+      .hero div span {
+        font-size: 0.85rem;
+        letter-spacing: 0.2rem; } }
+    @media (max-width: 575px) {
+      .hero div span {
+        letter-spacing: 0.8rem; } }
 
 .footer {
   background-color: #02090e;
@@ -59,14 +67,29 @@ body {
 .bg-brand {
   background-color: #ff4c29; }
 
+.bg-gray {
+  background-color: #e9eaeb; }
+
+.bg-light {
+  background-color: #f5f5f5; }
+
 .fc-brand {
   color: #ff4c29; }
 
 .menu__style {
   background-color: #ff4c29; }
-
-.menu__style-items a {
-  color: #f5f5f5; }
+  .menu__style ul li {
+    font-size: 0.8rem;
+    font-weight: 500;
+    letter-spacing: 0.2rem;
+    padding: 1rem; }
+    @media (max-width: 425px) {
+      .menu__style ul li {
+        letter-spacing: 0.1rem; } }
+  .menu__style .nav-item > a {
+    color: #02090e; }
+  .menu__style .nav-item > a:hover {
+    opacity: 0.5; }
 
 .title-l {
   font-size: 3rem;
@@ -121,7 +144,7 @@ body {
   background-color: #02090e; }
 
 .recorridos {
-  background-color: #e9eaeb;
+  background-color: #f5f5f5;
   color: #2c394b; }
   .recorridos .icon-list {
     color: #ff4c29; }
