--- a/scss/partials/_media-queries.scss
+++ b/scss/partials/_media-queries.scss
@@ -4,8 +4,20 @@
   }
 }
 
+@mixin tablet-S {
+  @media (max-width: 575px) {
+    @content;
+  }
+}
+
+@mixin mobile-M {
+  @media (max-width: 425px) {
+    @content;
+  }
+}
+
 @mixin mobile {
-  @media (max-width: 375px) {
+  @media (max-width: 320px) {
     @content;
   }
 }
