--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@ body {
       padding: 2rem 0rem;
       min-height: 100vh; } }
   .hero div span {
-    letter-spacing: 1.4rem;
+    letter-spacing: 6px;
     text-shadow: 1px 1px 2px #121314; }
     @media (max-width: 320px) {
       .hero div span {
@@ -26,10 +26,10 @@ body {
     @media (max-width: 425px) {
       .hero div span {
         font-size: 0.85rem;
-        letter-spacing: 0.2rem; } }
+        letter-spacing: 1px; } }
     @media (max-width: 575px) {
       .hero div span {
-        letter-spacing: 0.8rem; } }
+        letter-spacing: 1px; } }
 
 .footer {
   background-color: #02090e;
@@ -133,15 +133,29 @@ body {
   width: 20rem;
   height: auto; }
 
-.sponsors-img img {
-  width: 10rem;
-  height: auto; }
-
 .sponsors {
-  background-color: #ff4c29; }
+  background-color: #ff4c29;
+  display: flex;
+  justify-content: center; }
+  @media (max-width: 425px) {
+    .sponsors {
+      justify-content: space-around; } }
+  .sponsors .sponsors-img img {
+    width: 10rem;
+    height: auto; }
+    @media (max-width: 320px) {
+      .sponsors .sponsors-img img {
+        width: 3.4rem;
+        text-align: center; } }
+    @media (max-width: 425px) {
+      .sponsors .sponsors-img img {
+        width: 3.8rem;
+        text-align: center; } }
 
 .video {
   background-color: #02090e; }
+  .video .video__youtube {
+    min-height: 30rem; }
 
 .recorridos {
   background-color: #f5f5f5;
@@ -153,6 +167,30 @@ body {
     padding: 0 2rem 1rem 0;
     background-image: url("../img/list-icon-gr.svg");
     background-repeat: no-repeat; }
+  .recorridos .recorridos__maps {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end; }
+    @media (max-width: 768px) {
+      .recorridos .recorridos__maps {
+        align-items: center; } }
+    @media (max-width: 320px) {
+      .recorridos .recorridos__maps {
+        align-items: center; } }
+  .recorridos .recorridos__maps-img {
+    display: flex;
+    justify-content: center; }
+  .recorridos .recorridos__maps-img > img {
+    width: 50%;
+    height: auto; }
+    @media (max-width: 768px) {
+      .recorridos .recorridos__maps-img > img {
+        width: 70%;
+        text-align: center; } }
+    @media (max-width: 320px) {
+      .recorridos .recorridos__maps-img > img {
+        width: 100%; } }
 
 .recorridos__eco {
   background-color: #e9eaeb;
