--- a/scss/partials/_hero.scss
+++ b/scss/partials/_hero.scss
@@ -10,17 +10,17 @@
   background-size: cover;
 
   div span {
-    letter-spacing: 1.4rem;
+    letter-spacing: 6px;
     @include mobile {
       letter-spacing: 0px;
       font-size: 0.9rem;
     }
     @include mobile-M {
       font-size: 0.85rem;
-      letter-spacing: 0.2rem;
+      letter-spacing: 1px;
     }
     @include tablet-S {
-      letter-spacing: 0.8rem;
+      letter-spacing: 1px;
     }
     text-shadow: 1px 1px 2px $shadow;
   }
