--- a/scss/partials/_hero.scss
+++ b/scss/partials/_hero.scss
@@ -8,6 +8,7 @@
   background-image: url("../img/run1.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
 
   div span {
     letter-spacing: 6px;
