--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,7 @@ body {
       min-height: 100vh; } }
   .hero div span {
     letter-spacing: 6px;
+    color: #f5f5f5;
     text-shadow: 1px 1px 2px #121314; }
     @media (max-width: 320px) {
       .hero div span {
@@ -81,9 +82,9 @@ body {
   color: #2c394b; }
 
 .gr-button {
-  width: auto;
+  max-width: auto;
   height: auto;
-  padding: 0.5rem 1.5rem;
+  padding: 0.5rem 1rem;
   color: white;
   font-size: 1rem;
   font-weight: 500;
@@ -99,6 +100,7 @@ body {
   background-color: #2c394b; }
 
 .menu__style {
+  width: 100%;
   background-color: #ff4c29; }
   .menu__style ul li {
     font-size: 0.8rem;
@@ -112,6 +114,16 @@ body {
     color: #02090e; }
   .menu__style .nav-item > a:hover {
     opacity: 0.5; }
+
+.menu__style-nav {
+  display: flex;
+  justify-content: flex-end; }
+  @media (max-width: 768px) {
+    .menu__style-nav {
+      justify-content: flex-start; } }
+  @media (max-width: 425px) {
+    .menu__style-nav {
+      justify-content: flex-start; } }
 
 .title-l {
   font-size: 3rem;
@@ -233,10 +245,14 @@ body {
 .contacto {
   min-height: 40rem;
   background-color: #e9eaeb;
-  color: #2c394b;
-  display: flex;
-  justify-content: center;
-  align-items: center; }
+  color: #2c394b; }
+  .contacto .contacto__form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-self: flex-end; }
+  .contacto .contacto__form-location {
+    align-self: center; }
 
 /*fin contacto*/
 .info {
