--- a/scss/estilos-sass.scss
+++ b/scss/estilos-sass.scss
@@ -35,9 +35,9 @@
 }
 
 .gr-button {
-  width: auto;
+  max-width: auto;
   height: auto;
-  padding: 0.5rem 1.5rem;
+  padding: 0.5rem 1rem;
   color: white;
   font-size: 1rem;
   font-weight: 500;
@@ -54,7 +54,9 @@
 }
 
 .menu__style {
+  width: 100%;
   background-color: $color-primario;
+
   ul li {
     font-size: 0.8rem;
     font-weight: 500;
@@ -70,6 +72,16 @@
   }
   .nav-item > a:hover {
     opacity: 0.5;
+  }
+}
+.menu__style-nav {
+  display: flex;
+  justify-content: flex-end;
+  @include tablet {
+    justify-content: flex-start;
+  }
+  @include mobile-M {
+    justify-content: flex-start;
   }
 }
 
@@ -222,9 +234,16 @@
   min-height: 40rem;
   background-color: $gray;
   color: $color-secundario;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+
+  .contacto__form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-self: flex-end;
+  }
+  .contacto__form-location {
+    align-self: center;
+  }
 }
 
 /*fin contacto*/
