--- a/css/styles.css
+++ b/css/styles.css
@@ -82,12 +82,15 @@ body {
   color: #2c394b; }
 
 .gr-button {
-  max-width: auto;
+  max-width: 14rem;
   height: auto;
-  padding: 0.5rem 1rem;
+  padding: 0.6rem;
   color: white;
-  font-size: 1rem;
+  font-size: 0.9rem;
   font-weight: 500;
+  text-transform: uppercase;
+  text-align: center;
+  letter-spacing: 1px;
   border: 1px transparent;
   border-radius: 4px;
   outline: none;
@@ -95,9 +98,17 @@ body {
 
 .gr-button-primary {
   background-color: #ff4c29; }
+  .gr-button-primary:hover {
+    opacity: 0.9; }
+  .gr-button-primary:active {
+    color: #02090e; }
 
 .gr-button-secondary {
   background-color: #2c394b; }
+  .gr-button-secondary:hover {
+    opacity: 0.9; }
+  .gr-button-secondary:active {
+    color: #02090e; }
 
 .menu__style {
   width: 100%;
@@ -105,6 +116,7 @@ body {
   .menu__style ul li {
     font-size: 0.8rem;
     font-weight: 500;
+    text-transform: uppercase;
     letter-spacing: 0.2rem;
     padding: 1rem; }
     @media (max-width: 425px) {
@@ -125,10 +137,17 @@ body {
     .menu__style-nav {
       justify-content: flex-start; } }
 
+.title-m {
+  font-size: 2.2rem;
+  font-weight: 800;
+  font-style: italic;
+  text-shadow: #121314;
+  text-transform: uppercase; }
+
 .title-l {
   font-size: 3rem;
-  font-weight: bolder;
-  font-style: oblique;
+  font-weight: 800;
+  font-style: italic;
   text-shadow: #121314;
   text-transform: uppercase; }
 
@@ -153,6 +172,13 @@ body {
 .inscripcion__form {
   background-color: #e9eaeb;
   color: #2c394b; }
+
+.inscripcion__reglamento {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 10rem;
+  background-color: #ff4c29; }
 
 .kit {
   background-color: #f5f5f5;
