--- a/css/styles.css
+++ b/css/styles.css
@@ -284,3 +284,25 @@ body {
 .info {
   background-color: #e9eaeb;
   color: #2c394b; }
+
+.form__pre {
+  /* background-image: url(../img/ccc2021.jpg); */
+  background-color: #ff4c29;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: 100vh; }
+  .form__pre .form__pre-container {
+    width: 80%;
+    /* min-height: 100vh; */
+    min-height: 40rem;
+    margin-top: 20rem;
+    background-color: #f5f5f5;
+    padding: 2rem;
+    color: #2c394b;
+    border: 1px solid transparent;
+    border-radius: 4px; }
+    @media (max-width: 320px) {
+      .form__pre .form__pre-container {
+        width: 100%;
+        padding: 0px; } }
