--- a/css/styles.css
+++ b/css/styles.css
@@ -292,6 +292,8 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   min-height: 100vh; }
+  .form__pre a {
+    text-decoration: none; }
   .form__pre .form__pre-container {
     width: 80%;
     /* min-height: 100vh; */
@@ -306,3 +308,12 @@ body {
       .form__pre .form__pre-container {
         width: 100%;
         padding: 0px; } }
+  .form__pre .form__pre-link::before {
+    content: "";
+    padding: 0 2rem 1rem 0;
+    background-image: url("../img/MobileBackArrowMajor.svg");
+    background-repeat: no-repeat;
+    background-size: 65%;
+    background-position: top; }
+  .form__pre .form__pre-link:hover {
+    opacity: 0.5; }
