--- a/scss/estilos-sass.scss
+++ b/scss/estilos-sass.scss
@@ -1,7 +1,14 @@
 @import "partials/variables";
 @import "partials/globals";
 @import "partials/media-queries";
+@import "partials/menu";
 @import "partials/hero";
+@import "partials/home";
+@import "partials/inscripcion";
+@import "partials/preinscripcion";
+@import "partials/recorridos";
+@import "partials/contacto";
+@import "partials/info";
 @import "partials/footer";
 
 .body__style {
@@ -69,38 +76,6 @@
   }
 }
 
-.menu__style {
-  width: 100%;
-  background-color: $color-primario;
-
-  ul li {
-    font-size: 0.8rem;
-    font-weight: 500;
-    text-transform: uppercase;
-    letter-spacing: 0.2rem;
-    padding: 1rem;
-
-    @include mobile-M {
-      letter-spacing: 0.1rem;
-    }
-  }
-  .nav-item > a {
-    color: $black;
-  }
-  .nav-item > a:hover {
-    opacity: 0.5;
-  }
-}
-.menu__style-nav {
-  display: flex;
-  justify-content: flex-end;
-  @include tablet {
-    justify-content: flex-start;
-  }
-  @include mobile-M {
-    justify-content: flex-start;
-  }
-}
 
 .title-m {
   font-size: $title-m;
@@ -122,209 +97,4 @@
   font-weight: bolder;
   text-shadow: $shadow;
   text-transform: uppercase;
-}
-
-.resena {
-  background-color: $color-primario;
-  color: $black;
-}
-
-.inscripcion {
-  min-height: 540px;
-  background-image: url("../img/inscripciones.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  width: 100%;
-}
-
-.inscripcion__form {
-  background-color: $gray;
-  color: $color-secundario;
-}
-
-.inscripcion__reglamento {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 10rem;
-  background-color: $color-primario;
-}
-
-.kit {
-  background-color: $white;
-  color: $color-secundario;
-  // display: flex;
-  // justify-content: center;
-  // align-items: center;
-  .icon-list {
-    color: $color-primario;
-  }
-  .icon-list::before {
-    content: "";
-    padding: 0 2rem 1rem 0;
-    background-image: url("../img/list-icon-gr.svg");
-    background-repeat: no-repeat;
-  }
-}
-
-.img-kit > img {
-  width: 20rem;
-  height: auto;
-}
-
-.sponsors {
-  background-color: $color-primario;
-  display: flex;
-  justify-content: center;
-  @include mobile-M {
-    justify-content: space-around;
-  }
-
-  .sponsors-img img {
-    width: 10rem;
-    height: auto;
-    @include mobile {
-      width: 3.4rem;
-      text-align: center;
-    }
-    @include mobile-M {
-      width: 3.8rem;
-      text-align: center;
-    }
-  }
-}
-
-.video {
-  background-color: $black;
-
-  .video__youtube {
-    min-height: 30rem;
-  }
-}
-.recorridos {
-  background-color: $white;
-  color: $color-secundario;
-
-  .icon-list {
-    color: $color-primario;
-  }
-  .icon-list::before {
-    content: "";
-    padding: 0 2rem 1rem 0;
-    background-image: url("../img/list-icon-gr.svg");
-    background-repeat: no-repeat;
-  }
-
-  .recorridos__maps {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-end;
-    @include tablet {
-      align-items: center;
-    }
-    @include mobile {
-      align-items: center;
-    }
-  }
-
-  .recorridos__maps-img {
-    display: flex;
-    justify-content: center;
-  }
-
-  .recorridos__maps-img > img {
-    width: 50%;
-    height: auto;
-    @include tablet {
-      width: 100%;
-      text-align: center;
-    }
-    @include tablet-S {
-      width: 80%;
-      text-align: center;
-    }
-    @include mobile {
-      width: 100%;
-    }
-  }
-}
-
-.recorridos__eco {
-  background-color: $gray;
-  color: $color-secundario;
-}
-
-.distancias__item {
-  border: 2px solid #ff4c29;
-  border-radius: 4px;
-  max-width: 10rem;
-}
-
-/*contacto*/
-.contacto {
-  min-height: 40rem;
-  background-color: $gray;
-  color: $color-secundario;
-
-  .contacto__form {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    align-self: flex-end;
-  }
-  .contacto__form-location {
-    align-self: center;
-  }
-}
-
-/*fin contacto*/
-
-.info {
-  background-color: $gray;
-  color: $color-secundario;
-}
-
-.form__pre{
-  /* background-image: url(../img/ccc2021.jpg); */
-  background-color: $color-primario;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  min-height: 100vh;
-  
-  a {
-    text-decoration: none;
-  }
-
-  .form__pre-container {
-    width: 80%;
-    /* min-height: 100vh; */
-    min-height: 40rem;
-    margin-top: 20rem;
-    background-color: $white;
-    padding: 2rem;
-    color: $color-secundario;
-    border: 1px solid transparent;
-    border-radius: 4px;
-
-     @include mobile{
-        width: 100%;
-        padding: 0px;
-    }
-
-  }
-  .form__pre-link::before{
-    content: "";
-    padding: 0 2rem 1rem 0;
-    background-image: url("../img/MobileBackArrowMajor.svg");
-    background-repeat: no-repeat;
-    background-size: 65%;
-    background-position:top
-  }
-  .form__pre-link:hover{
-    opacity: 0.5;
-  }
-
 }
