--- a/css/styles.css
+++ b/css/styles.css
@@ -63,6 +63,12 @@ body {
 .resena {
   background-color: #ff4c29;
   color: #02090e; }
+  .resena .link-resena {
+    text-decoration: none;
+    color: #f5f5f5; }
+  .resena a:hover {
+    color: #02090e;
+    text-decoration: underline; }
 
 .sponsors {
   background-color: #ff4c29;
