--- a/scss/partials/_home.scss
+++ b/scss/partials/_home.scss
@@ -1,6 +1,15 @@
 .resena {
     background-color: $color-primario;
     color: $black;
+
+    .link-resena{
+      text-decoration: none;
+      color: $white;
+    }
+    a:hover{
+      color: $black;
+      text-decoration: underline;
+    }
   }
   
   .sponsors {
