--- a/scss/partials/_home.scss
+++ b/scss/partials/_home.scss
@@ -35,7 +35,7 @@
   }
   
   .video {
-    background-color: $black;
+    background-color: $color-primario;
   
     .video__youtube {
       min-height: 30rem;
