--- a/scss/partials/_globals.scss
+++ b/scss/partials/_globals.scss
@@ -1,8 +1,10 @@
 * {
   font-family: "Open Sans", sans-serif;
-  margin: 0px !important;
+/*   margin: 0px !important;
+  box-sizing: border-box !important; */
 }
-body {
+/* body {
   margin: 0px !important;
-  padding: 0px !important;
-}
+  padding: 0px !important; 
+} */
+
