--- a/css/styles.css
+++ b/css/styles.css
@@ -210,8 +210,9 @@
 
 /*contacto*/
 .contacto {
+  width: 100%;
   min-height: 40rem;
-  background-color: #e9eaeb;
+  background-color: #f5f5f5;
   color: #2c394b; }
   .contacto .contacto__form {
     display: flex;
