--- a/scss/partials/_contacto.scss
+++ b/scss/partials/_contacto.scss
@@ -1,8 +1,9 @@
 
 /*contacto*/
 .contacto {
+    width: 100%;
     min-height: 40rem;
-    background-color: $gray;
+    background-color: $white;
     color: $color-secundario;
   
     .contacto__form {
