--- a/scss/partials/_hero.scss
+++ b/scss/partials/_hero.scss
@@ -8,8 +8,9 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  color: $white;
 
-  div span {
+  /* div span {
     letter-spacing: 6px;
     color: $white;
     @include mobile {
@@ -24,5 +25,5 @@
       letter-spacing: 1px;
     }
     text-shadow: 1px 1px 2px $shadow;
-  }
+  } */
 }
