--- a/css/styles.css
+++ b/css/styles.css
@@ -61,6 +61,78 @@
     .hero {
       padding: 2rem 0rem;
       min-height: 100vh; } }
+  .hero .hero__link {
+    text-decoration: none;
+    color: #f5f5f5; }
+    .hero .hero__link:hover {
+      opacity: 0.5; }
+
+.hero__animation-contenedor {
+  width: 300px;
+  height: 80px;
+  color: #f5f5f5;
+  font-size: 80px;
+  font-style: italic;
+  font-weight: bolder;
+  text-shadow: 4px 2px 4px #242525;
+  text-transform: uppercase;
+  text-align: center;
+  line-height: 80px;
+  overflow: hidden; }
+  @media (max-width: 320px) {
+    .hero__animation-contenedor {
+      height: 40px;
+      font-size: 40px; } }
+  @media (max-width: 320px) {
+    .hero__animation-contenedor {
+      line-height: 40px; } }
+  .hero__animation-contenedor ul {
+    list-style: none;
+    padding-left: 10px;
+    padding-bottom: 5px;
+    margin: 0;
+    animation: animar 10s infinite;
+    transition: all 300ms; }
+
+@keyframes animar {
+  0% {
+    margin-top: 0; }
+  20% {
+    margin-top: 0; }
+  25% {
+    margin-top: -80px; }
+  50% {
+    margin-top: -80px; }
+  55% {
+    margin-top: -160px; }
+  70% {
+    margin-top: -160px; }
+  70% {
+    margin-top: -160px; }
+  95% {
+    margin-top: -80px; }
+  100% {
+    margin-top: 0px; } }
+  @media (max-width: 320px) {
+    @keyframes animar {
+      0% {
+        margin-top: 0; }
+      20% {
+        margin-top: 0; }
+      25% {
+        margin-top: -40px; }
+      50% {
+        margin-top: -40px; }
+      55% {
+        margin-top: -80px; }
+      70% {
+        margin-top: -80px; }
+      70% {
+        margin-top: -80px; }
+      95% {
+        margin-top: -40px; }
+      100% {
+        margin-top: 0px; } } }
 
 .resena {
   background-color: #ff4c29;
@@ -336,12 +408,12 @@
   font-size: 2.8rem;
   font-weight: 800;
   font-style: italic;
-  text-shadow: #242525;
   text-transform: uppercase;
   text-shadow: 4px 2px 4px #242525; }
 
 .title-xl {
   font-size: 4rem;
+  font-style: italic;
   font-weight: bolder;
   text-shadow: 4px 2px 4px #242525;
   text-transform: uppercase; }
