--- a/scss/estilos-sass.scss
+++ b/scss/estilos-sass.scss
@@ -92,12 +92,12 @@
   font-size: $title-l;
   font-weight: 800;
   font-style: italic;
-  text-shadow: $shadow;
   text-transform: uppercase;
   text-shadow: 4px 2px 4px $shadow;
 }
 .title-xl {
   font-size: $title-xl;
+  font-style: italic;
   font-weight: bolder;
   text-shadow: 4px 2px 4px $shadow;
   text-transform: uppercase;
