--- a/scss/partials/_hero.scss
+++ b/scss/partials/_hero.scss
@@ -26,4 +26,86 @@
     }
     text-shadow: 1px 1px 2px $shadow;
   } */
+
+  .hero__link{
+    text-decoration: none;
+    color: $white;
+    &:hover{
+      opacity: 0.5;
+    }
+  }
+}
+
+
+
+.hero__animation-contenedor{
+  width: 300px;
+  height: 80px;
+  color: $white;
+  font-size: 80px;
+  @include mobile{
+      height: 40px;
+      font-size: 40px;
+  }
+  font-style: italic;
+  font-weight: bolder;
+  text-shadow: 4px 2px 4px $shadow;
+  text-transform: uppercase;
+  text-align: center;
+  line-height: 80px;
+  @include mobile{
+    line-height: 40px;
+}
+  overflow: hidden;
+
+
+    ul{
+      list-style: none;
+      padding-left: 10px;
+      padding-bottom: 5px;
+      margin: 0;
+      animation: animar 10s infinite;
+      transition: all 300ms;
+    }
+
+    @keyframes animar{
+      0% {margin-top: 0;}
+      20% {margin-top: 0;}
+
+
+      25% {margin-top: -80px;}
+      50% {margin-top: -80px;}
+
+      55% {margin-top: -160px;}
+      70% {margin-top: -160px;}
+
+      70% {margin-top: -160px;}
+      95% {margin-top: -80px;}
+
+      100% {margin-top: 0px;}
+
+     
+    }
+
+    @include mobile{
+      @keyframes animar{
+        0% {margin-top: 0;}
+        20% {margin-top: 0;}
+  
+  
+        25% {margin-top: -40px;}
+        50% {margin-top: -40px;}
+  
+        55% {margin-top: -80px;}
+        70% {margin-top: -80px;}
+  
+        70% {margin-top: -80px;}
+        95% {margin-top: -40px;}
+  
+        100% {margin-top: 0px;}
+  
+       
+      }
+    }
+    
 }
