--- a/css/styles.css
+++ b/css/styles.css
@@ -296,6 +296,16 @@
   min-height: 40rem;
   background-color: #f5f5f5;
   color: #2c394b; }
+  .contacto .contacto__icons-tel::before {
+    content: "";
+    padding: 0 2rem 1rem 0;
+    background-image: url(/img/phone.svg);
+    background-repeat: no-repeat; }
+  .contacto .contacto__icons-gps::before {
+    content: "";
+    padding: 0 2rem 1rem 0;
+    background-image: url(/img/gps.svg);
+    background-repeat: no-repeat; }
   .contacto .contacto__form {
     display: flex;
     justify-content: center;
